--- a/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
+++ b/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
@@ -69,7 +69,7 @@ info:
     of this document and scope for each resource is given in **authorizations** section of resource documentation.
     Following is the format of the request if you are using the password grant type.
     ```
-    curl -k -d "grant_type=password&username=<admin_username>&password=<admin_passowrd>&scope=<scopes seperated by space>"
+    curl -k -d "grant_type=password&username=<admin_username>&password=<admin_passowrd>&scope=<scopes separated by space>"
     \ -H "Authorization: Basic base64(cliet_id:client_secret)"
     \ https://<host>:<server_port>/oauth2/token
     ```
@@ -323,7 +323,7 @@ paths:
         - Application Policy (Individual)
       summary: Update an Application Throttling policy
       description: |
-        Updates an existing application level throttling policy. Upon a succesfull update, you will receive the updated application policy as the response.
+        Updates an existing application level throttling policy. Upon a successful update, you will receive the updated application policy as the response.
       parameters:
         - $ref: '#/components/parameters/policyId'
         - $ref: '#/components/parameters/Content-Type'
@@ -527,7 +527,7 @@ paths:
         - Subscription Policy (Individual)
       summary: Get a Subscription Policy
       description: |
-        This operation can be used to retrieves subscription level throttling policy by specifying the Id of the policy as a path paramter
+        This operation can be used to retrieves subscription level throttling policy by specifying the Id of the policy as a path parameter
       parameters:
         - $ref: '#/components/parameters/policyId'
       responses:
@@ -651,7 +651,7 @@ paths:
         - Subscription Policy (Individual)
       summary: Delete a Subscription Policy
       description: |
-        This operation can be used to delete a subscription level throttling policy by specifying the Id of the policy as a path paramter.
+        This operation can be used to delete a subscription level throttling policy by specifying the Id of the policy as a path parameter.
       parameters:
         - $ref: '#/components/parameters/policyId'
       responses:
@@ -2067,7 +2067,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PublishStatus'
         202:
-          description: Request is sucessfully accepted for processing.
+          description: Request is successfully accepted for processing.
           content:
             application/json:
               schema:
@@ -2180,7 +2180,7 @@ paths:
       summary: |
         Get Pending Workflow Details by External Workflow Reference
       description: |
-        Using this operation, you can retrieve complete details of a pending workflow request that either belongs to application creation, application subscription, application registration, api state change, user self sign up.. You need to provide the External_Workflow_Reference of the workflow Request to retrive it.
+        Using this operation, you can retrieve complete details of a pending workflow request that either belongs to application creation, application subscription, application registration, api state change, user self sign up.. You need to provide the External_Workflow_Reference of the workflow Request to retrieve it.
       parameters:
         - name: externalWorkflowRef
           in: path
@@ -2498,9 +2498,9 @@ paths:
     get:
       tags:
         - Settings
-      summary: Retreive Admin Settings
+      summary: Retrieve Admin Settings
       description: |
-        Retreive admin settings
+        Retrieve admin settings
       responses:
         200:
           description: |
@@ -2911,7 +2911,7 @@ paths:
         - System Scopes
       summary: Retrieve Role Alias Mappings
       description: |
-        This operation can be used to retreive role alias mapping
+        This operation can be used to retrieve role alias mapping
       responses:
         200:
           description: |
@@ -4223,7 +4223,7 @@ components:
           description: |
             Specifies whether inversion of the condition to be matched against the request.
 
-            **Note:** When you add conditional groups for advanced throttling policies, this paramater should have the
+            **Note:** When you add conditional groups for advanced throttling policies, this parameter should have the
             same value ('true' or 'false') for the same type of conditional group.
           default: false
         headerCondition:
@@ -6189,7 +6189,7 @@ components:
             apim:api_category: Manage API categories
             apim:admin_settings: Retrieve admin settings
             apim:admin_alert_manage: Manage admin alerts
-            apim:api_workflow_view: Retrive workflow requests
+            apim:api_workflow_view: Retrieve workflow requests
             apim:scope_manage: Manage system scopes
             apim:role_manage: Manage system roles
             apim:admin_application_view: View Applications
